--- a/style.css
+++ b/style.css
@@ -1,45 +1,160 @@
-/*Fondo de pantalla*/
-.fondodepantalla{
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans';
+}
+.contenido{
+    max-width: 1200px;
     width: 100%;
-    height: 100%;
-    
+    margin: 40px auto;
+    display: flex;
+}
+.mostrador{
+    width: 100%;
+    transition: .5s ease;
+}
+.mostrador .fila{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
 }
 
-/* Estilos para el encabezado */
-h1 {
-    color: #333;
-    font-size: 28px;
-  }
-  
-  /* Estilos para las tarjetas */
-  .card {
-    margin-bottom: 20px;
-  }
-  
-  .card-img-top {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .card-title {
-    font-size: 18px;
-  }
-  
-  .card-text {
-    color: #666;
-  }
-  
-  /* Estilos para el botón */
-  .btn-primary {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
+.mostrador .fila .item{
+    max-width: 210px;
+    padding: 30px;
+    height: 250px;
+    /*border: 2px solid red;*/
+    text-align: center;
+    margin: 0 10px;
     cursor: pointer;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-  }
-  
+    border-radius: 5px;
+    transition: .3s;
+}
+.mostrador .fila .item:hover{
+    background-color: #e6e6e6;
+}
+.mostrador .fila .item img{
+    width: 100%;
+    margin: 30px 0;
+}
+.mostrador .fila .item .descripcion{
+    color: #707070;
+    font-weight: bold;
+}
+.mostrador .fila .item .precio{
+    color: #f85151;
+    font-weight: bold;
+    font-size: 20px;
+}
+.seleccion{
+    transition: .5s ease;
+    opacity: 0;
+    width: 0%;
+    border: 1px solid #ccc;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+.cerrar{
+    position: absolute;
+    right: 0;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.info{
+    padding: 20px;
+}
+.info img{
+    display: block;
+    margin: 30px auto;
+    width: 80%;
+}
+.info h2{
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info p{
+    font-size: 14px;
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info .precio{
+    font-size: 30px;
+    font-weight: bold;
+    color: #f85151;
+    margin-bottom: 10px;
+    display: block;
+}
+.info .fila{
+    display: flex;
+    align-items: flex-end;
+}
+.info .fila label{
+    display: block;
+    margin-bottom: 10px;
+}
+.info .fila select{
+    width: 100px;
+    font-size: 18px;
+    padding: 6px;
+    margin-right: 30px;
+}
+.info .fila button{
+    height: 40px;
+    border: none;
+    padding: 0 10px;
+    color: #fff;
+    background-color: #f85151;
+}
+/*
+.navegacion{
+  background-color: #6f7cf1;
+}
+
+.search{
+  width: 90;
+  max-width: 1000px;
+  margin: auto;
+  background: #fff;
+  padding: 0 10px;
+  padding-bottom: 5px;
+  max-height: 85%;
+  overflow-x: hidden;
+}
+
+input[type="search"]{
+  padding: 10px;
+  padding-right: 35px;
+  border: none;
+}
+.search-table{
+  width: 100%;
+}
+
+tbody tr td{
+  width: 100%;
+}
+
+tbody tr td a:hover{
+  border: 2px solid #378fd9;
+}
+
+tbody tr td a{
+  text-decoration: none;
+  font-size: 18px;
+  color: #737373;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 20px 0;
+  padding-left: 20px;
+  border: 2px solid #fff;
+
+}*/
